better fix for DataTables issue that made "List of Tables" invisible in IE 7 (for trunk)
git-svn-id: https://wp-table-reloaded.googlecode.com/svn/trunk@392 335f5990-30c3-11de-96ab-f16d9912eac9

--- a/admin/admin-style.dev.css
+++ b/admin/admin-style.dev.css
@@ -210,6 +210,8 @@ div.closed .hide_link { display: none; }
 
 .dataTables_wrapper {
 	clear: both;
+	position: relative;
+	zoom: 1;
 }
 
 .dataTables_processing {
