--- a/css/datatables.css
+++ b/css/datatables.css
@@ -17,7 +17,9 @@
 }
 
 .dataTables_wrapper {
-	min-height: 302px;
+    position: relative;
+    zoom: 1;
+    min-height: 302px;
 	_height: 302px;
 	clear: both;
 }
